Fix the overlapping problem of player and terminal.

--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -2,10 +2,10 @@
   margin-bottom: 10px;
 }
 #terminal {
-  position: fixed;
-  top: 50%;
+  position: absolute;
+  margin-top: 20px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%);
   visibility: visible;
 }
 #player {
